    Added: MAX_INSTANCES, MAX_CLIENT_PER_HOST and FTPD_CONF_DIR parameters in proftpd/proftpd.data file
    Added: MOUNT_CUSTOMER_LOGS parameter in apache/apache.data file (allows to disable logs bind mounts)
    Changed: Increased default limits for ProFTPD/VsFTPd
    Fixed: Allow access to .well-known folder in any case if exists (Apache2)

DATABASE
    Added: SPF type to the list of allowed DNS resource records
    Changed: domain_dns.domain_dns and domain_dns.domain_text column types from varchar to text
    Updated: domain_id index on domain_dns table; added index length for domain_dns and domain_text columns

FRONTEND
    Added: Datatable for the file system information table
    Added: SPF DNS resource record type (validated as a TXT record)
    Changed: The `type` field cannot longer be changed when editing a DNS resource record
    Changed: Support for nested MySQL transactions is now emulated using named transaction savepoints
    Fixed: Cannot add DKIM/DMARC DNS resource records
    Fixed: Customer must be allowed to set custom TTL value for any DNS resource record
    Fixed: Customer must be allowed to set `name` field of any DNS resource record
    Fixed: IDNs are shown in IDNA form in SSL certificate management interface
    Fixed: iMSCP_Update_Database::addIndex() doesn't allows to set index length
    Removed: User deletion confirmation pages (admin/reseller level)
    Rewritten: FTP chooser interface to avoid usage of iframe

INSTALLER
    Added: Check to prevent downgrade attempts (when DB schema change is involved)
    Added: Conditional statement feature for install.xml files (copy_config items only)
    Fixed: Debug and verbose modes must be set early
    Fixed: Don't die on misconfigured server hostname. Just ask for a valid hostname instead
    Fixed: Plugin setup listeners are no longer registered (regression fix)
    Moved: Master administrator questions and setup routines into the Package::FrontEnd::Installer package