@@ -146,11 +146,8 @@ QUOTA_ROOT_DIR = /var/www/imscp/engine/quota
 
 USER_INITIAL_THEME = default
 
-# 'yes' or 'no'
+# Possible values: infront, behind, none
 MYSQL_PREFIX =
-# 'none' if MYSQL_PREFIX is set to 'no',
-# 'infront' or 'behind' if MYSQL_PREFIX is set to 'yes'
-MYSQL_PREFIX_TYPE =
 
 # String used for assets cache busting
 # Must be updated each time an asset is updated
