@@ -25,6 +25,7 @@ CONFIG
     Added: MOUNT_CUSTOMER_LOGS parameter in apache/apache.data file (allows to disable logs bind mounts)
     Changed: Increased default limits for ProFTPD/VsFTPd
     Fixed: Allow access to .well-known folder in any case if exists (Apache2)
+    Removed: Redundant MYSQL_PREFIX_TYPE parameter
 
 DATABASE
     Added: SPF type to the list of allowed DNS resource records
